--- a/Section4_Final_Example_Conclusions.Rmd
+++ b/Section4_Final_Example_Conclusions.Rmd
@@ -1,7 +1,16 @@
 A Final Example
 ===============
 
-Here we present a final example that draws upon the many advanced concepts discussed in this tutorial to produce a map of 18th Century Shipping flows. The data have been obtained from the CLIWOC project and they represent a sample of digitised ships' logs from the 18th Century. We are using a very small sample of the the full dataset, which is available from here: http://pendientedemigracion.ucm.es/info/cliwoc/. The example has been chosen to demonstrate a range of capabilities within ggplot2 and the ways in which they can be applied to produce high-quality maps with only a few lines of code. We end by showing how the maps can be animated to chart the routes over time and the ability of R to produce many maps very quickly.
+Here we present a final example that draws upon the many advanced concepts discussed in 
+this tutorial to produce a map of 18th Century Shipping flows. The data have been obtained 
+from the CLIWOC project and they represent a sample of digitised ships' logs from the 18th Century. 
+We are using a very small sample of the the full dataset, which is available from here: 
+http://pendientedemigracion.ucm.es/info/cliwoc/. 
+The example has been chosen to demonstrate a range of capabilities 
+within ggplot2 and the ways in which they can be applied to produce 
+high-quality maps with only a few lines of code. 
+We end by showing how the maps can be animated to chart
+the routes over time and the ability of R to produce many maps very quickly.
 
 As always, the first step is to load in the required packages and datasets. Here we are using the png package to load in a series of map annotations. These have been created in image editing software and will add a historic feel to the map. We are also loading in a World boundary shapefile and the shipping data itself. 
 
@@ -14,6 +23,7 @@ btitle<-readPNG("figure/brit_titles.png")
 compass<-readPNG("figure/windrose.png")
 bdata<-read.csv("data/british_shipping_example.csv")
 ```
+
 If you look at the first few lines in the `bdata` object you will see there are 7 columns with each row representing a single point on the ships course. The year of the journey and the nationality of the ship are also included. The final 3 columns are identifiers that are used later to group the coordinate points together into the paths that ggplot2 plots.
 
 We first specify some plot parameters that remove the axis labels.
@@ -38,7 +48,10 @@ To see the result of this simply type:
 base + wrld
 ```
 
-The code snipped below creates the plot layer containing the the shipping routes. The `geom_path()` function is used to string together the coordinates into the routes. You can see within the `aes()` component we have specified long and lat plus pasted together the trp and group.regroup variables to identify the unique paths.
+The code snipped below creates the plot layer containing the the shipping routes. The `geom_path()`
+function is used to string together the coordinates into the routes. 
+You can see within the `aes()` component we have specified long and 
+lat plus pasted together the trp and `group.regroup` variables to identify the unique paths.
 
 ```{r}
 route <- c(geom_path(aes(long,lat,group=paste(bdata$trp, bdata$group.regroup, sep=".")), colour="#0F3B5F", size=0.2, data= bdata, alpha=0.5, lineend="round")) 
@@ -62,7 +75,7 @@ example of where functionality designed without spatial data in mind can be harn
 the purposes of producing interesting maps. Once you have produced the plot, alter the code 
 to recolour the shipping routes to make them appear more clearly against the blue marble background. 
 
-```{r World Shipping with NASA's Blue Marble}
+```{r World Shipping with raster background}
 earth<-readPNG("figure/earth_raster.png")
 
 base+annotation_raster(earth, xmin = -180, xmax = 180, ymin = -90, ymax = 90)+route+ theme(panel.background = element_rect(fill='#BAC4B9',colour='black')) +annotation_raster(btitle, xmin = 30, xmax = 140, ymin = 51, ymax = 87)+annotation_raster(compass, xmin = 65, xmax = 105, ymin = 25, ymax = 65)+ coord_equal()+quiet
@@ -70,7 +83,7 @@ base+annotation_raster(earth, xmin = -180, xmax = 180, ymin = -90, ymax = 90)+ro
 
 ## Animating your plots
 
-<<<<<<< HEAD
+
 R is not designed to produce animated graphics and as such it has very few functions 
 that enable straightforward animation. To produce animated graphics users can 
 use a loop to plot and then export a series of images that can then be 
@@ -86,9 +99,6 @@ to produce an HTML animation of the shipping tracks completed in
 each year of the bdata object. The code snippet below appears 
 extremely dense, but it only contains a few addtions to the 
 plot code utilised above.
-=======
-R is not designed to produce animated graphics and as such it has very few functions that enable straightforward animation. To produce animated graphics users can use a loop to plot and then export a series of images that can then be stitched together into a video. There are two approaches to this; the first is to create a loop that fills a folder with the desired images and then utilise third party software to stitch the images together, whilst the second uses R's own animation package. The latter option still requires the installation of an additional software package called *ImageMagick* but it has the benefit of creating the animation for you within R and faciliting the export to a range of formats, not least HTML and GIF. Here we demonstrate the use of the package to produce an HTML animation of the shipping tracks completed in each year of the bdata object. The code snippet below appears extremely dense, but it only contains a few addtions to the plot code utilised above.
->>>>>>> 1290b74d50c1a02a571c477035646f453488e6a4
 
 First load the package:
 
